2005-07-13  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/repos/cvs.rb (import): use 'hiki' as a vendor-tag.

2005-07-12  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (tdiary_section): return empty
	strings if contents is empty.

	* hiki/command.rb (cmd_login), plugin/00default.rb (create_menu),
	template/login.html: redirect to the current page (suggested by
	hadai).

	* misc/plugin/attach/attach.rb (attach_map): unescape page
	names (by NAGASAKI).

	* hiki/command.rb (cmd_login): use Plugin#login.
	* misc/xmlrpc/xmlrpc.cgi: use Plugin#login and Plugin#editable?.
	save 'editor' and 'title' correctly.
	* plugin/00default.rb (editable?): add a new method.
	* hiki/plugin.rb (login): add a new method to set '@user'.

	* hiki-mode.el: support login and logout (by Takeshi UME Imai).

2005-07-09  Kouhei Yanagita <sugi@dream.big.or.jp>
	* style/default/html_formatter.rb: fixed: a block plugin preceding
	a heading level 1 (!) makes markup wrong.
	* theme/hiki/hiki.css: widen padding-bottom of 'div.body h3'.

2005-07-08  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/config.rb (load_messages): change name from guess_lang.
	use all values in HTTP_ACCEPT_LANGUAGE. use 'en' as @lang when
	resources of the acceptable languages is not found.
	set @lang in this function instead of load().

2005-07-08  Kazuhiko  <kazuhiko@fdiary.net>
	* messages/fr.rb, messages/it.rb (msg_login_failure): add a
	missing 'end'.
	* hiki/config.rb (guess_lang): add a new method to detect
	browsers' accept languages.

2005-07-06  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/i18n/hikiconf.rb.sample.en: add a setting of @base_url.

2005-07-06  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb: export 'attach_form' method
	(reported by Fu).

2005-07-05  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb (store): ignore Errno::EPERM in File::utime
	(reported by hashi).

	* hiki/command.rb (cmd_save): always save the 'editor' attribute.
