@@ -7,15 +7,16 @@
 </head>
 
 <body>
+<div class="<%= @contents[:view_style] %>">
 <div class="adminmenu"><%= @contents[:tools] %></div>
 <h1 class="header"><%= @contents[:title] %></h1>
 
 <div class="update day">
-<div class="form">
-  <% if @contents[:msg] %><div class="msg"><%= @contents[:msg] %></div><% end %>
+  <% if @contents[:msg] %><div class="msg"><strong><%= @contents[:msg] %></strong></div><% end %>
   <% if @contents[:freeze_msg] %><div class="msg"><%= @contents[:freeze_msg] %></div><% end %>
-  <% if @contents[:body] %><div><%= @contents[:body] %></div><% end %>
+  <% if @contents[:body] %><div class="preview"><%= @contents[:body] %></div><% end %>
   <% if @contents[:differ] %><div><%= @contents[:differ] %></div><% end %>
+<div class="form">
   <form class="update" action="<%= @contents[:cgi_name] %>" method="POST">
     <input type="hidden" name="p" value="<%= @contents[:pagename] %>">
     <input type="hidden" name="c" value="save">
@@ -57,7 +58,7 @@
   <div class="commentbody"><p><%=@conf.msg_rules%></p></div>
 </div>
 </div>
-
+</div>
 <div class="footer"><%= @contents[:footer] %></div>
 </body>
 </html>
